# dkvm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scratch/: investigation-hotkey-actions.md  investigation-m1ddc-replacement.md
scripts/: install-ddcutil.sh
src/dkvm/: __init__.py  backends.py  cli.py  macos_hotkeys.py  macos_native.py
tests/: test_cli.py
